# Experiments_GRaMPa

./: .gitignore  README.md  pyproject.toml
doc/: TODO.md  finetuning.md  hyperparameters.md
scripts/experiments/: _old_deberta_finetuning.py  _old_deberta_pretraining.py  _old_tokenisers_instances.py  corpus_stats.py  deberta_hyperparameters.py  lineages.py  run.py  tokenisers_hyperparameters.py  tokenisers_instances.py  tokenisers_intrinsic.py  tokenisers_training.py  tokenisers_visualise.py
scripts/visualisation/: _old_table_finetuning.py  gpu_hours.py  table_abstract.py  table_finetuning.py  table_instances.py  table_typos.py
slurm/modelling/: _old_deberta-finetuning_a100.slurm  _old_deberta-pretraining_h100_continued.slurm  _old_deberta-training_debug.slurm  deberta-finetuning_h100.slurm  deberta-pretraining_a100.slurm  deberta-pretraining_h100.slurm  run_a100.slurm  run_h100.slurm
slurm/tokenisers/: intrinsics.slurm  renyi-bpe-dropout.slurm  renyi-grampa-bpe-temp.slurm  renyi-grampa-ulm-temp.slurm  renyi-multi-bpe-1.slurm  renyi-multi-bpe-2.slurm  renyi-multi-ulm-1.slurm  renyi-multi-ulm-2.slurm  renyi-ulm-alpha.slurm  vocabularisation.slurm
tst/: constants.py  preamble.py
tst/experiments/: _old_deberta_finetuning.py  _old_deberta_pretraining.py  corpus_stats.py  deberta_finetuning.py  deberta_hyperparameters.py  deberta_lineages.py  deberta_pretraining.py  deberta_run.py  hyperparameters.py  lineages.py  run.py  tokenisers_hyperparameters.py  tokenisers_instances.py  tokenisers_training.py  tokenisers_visualise.py  train_deberta.py  train_tokenisers.py  (+2 more)
(+28 files in other folders)
