[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wiat"
version = "2024.10.01"
description = "WiaT: What's in a token? Experiments to figure out if language models know characters, and how to make them do so."
keywords = ["tokenization", "NLP"]

requires-python = ">= 3.10"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "datasets",
    "zstandard"  # Needed for SlimPajama dataset. HuggingFace won't tell you, of course. Instead, SentencePiece will complain that your corpus has 0 sentences.
]

[project.optional-dependencies]
github = [
    "tktkt[github] @ git+https://github.com/bauwenst/TkTkT",
    "fiject        @ git+https://github.com/bauwenst/fiject",
    "lamoto[github] @ git+https://github.com/bauwenst/LaMoTO"
]